--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -35,8 +35,10 @@ templateEngineOverride: njk,md
 
 <section class="cp-container vf-grid vf-grid__col-2">
   <div>
-  <p class="cp-lede">Content focussed on EMBL's culture and place within life sciences </p>
-  <p><a href="#">Learn more about EMBL</a></p>
+  <p class="cp-lede">EMBL: A centre of excellence in the life sciences </p>
+
+<p>Embl is an international, multicultural research insitute with laboratories at six locations across Europe. Find out more about our vibrant research community.</p>
+  <p><a href="#">Learn more about EMBL's mission</a></p>
   </div>
   <div>
     <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
@@ -55,13 +57,13 @@ templateEngineOverride: njk,md
         <h3><a href="#">From Genomes to Ecosystems – Life is Amazing!</a></h3>
       </div>
        <div>
-          <p class="cp-meta"><a href="#">Topic name</a></p>
-          <h3><a href="#">Research Content Item</a></h3>
-          <p>A description of several lines should go here to give context to the content</p>
+          <p class="cp-meta"><a href="#">Developmental biology</a></p>
+          <h3><a href="#">From zygote to zebrafish</a></h3>
+          <p>The development of multicellular organisms from single cells to adult animals requires the dynamic interplay of many cellular processes, coordinated in space and time.</p>
           <hr />
-          <p class="cp-meta"><a href="#">Topic name</a></p>
-          <h3><a href="#">Research Content Item</a></h3>
-          <p>A description of several lines should go here to give context to the content</p>
+          <p class="cp-meta"><a href="#">Genetics</a></p>
+          <h3><a href="#">Human Genome Project</a></h3>
+          <p>EMBL researchers look back on the project that determined the sequence of nucleotide base pairs that make up human DNA</p>
       </div>
     <div>
       <h4>More news</h4>
@@ -123,34 +125,120 @@ templateEngineOverride: njk,md
 </div>
 </section>
 
-<section class="cp-container vf-grid vf-grid__col-1">
-  <h2>Alumni</h2>
-  <ul>
-    <li>News</li>
-    <li>Upcoming events</li>
-    <li>Directory</li>
-  </ul>
+<section id="research" class="cp-container vf-grid vf-grid__col-1">
+<div>
+ <h2><a href="research/index.html">EMBL Alumni</a></h2>
+
+  <div class=" vf-grid vf-grid__col-3">
+      <div class="cp-card">
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
+        <p class="cp-meta">Topic: <a href="#">Anniversary</a></p>
+        <h3><a href="#">50 years of EMBL research</a></h3>
+      </div>
+       <div>
+          <p class="cp-meta"><a href="#">Alumni Relations</a></p>
+          <h3><a href="#">Building a community</a></h3>
+          <p>The EMBL Alumni Relations programme is built to advance EMBL and the relevance of life science research in the scientific community and society at large, by fostering connections between the laboratory, its member states, current EMBL staff, EMBL alumni and the public.
+
+</p>
+          <hr />
+          <p class="cp-meta"><a href="#">Genetics</a></p>
+          <h3><a href="#">Human Genome Project</a></h3>
+          <p>EMBL researchers look back on the project that determined the sequence of nucleotide base pairs that make up human DNA</p>
+      </div>
+    <div>
+      <h4>More news</h4>
+      <ul>
+          <li><a href="#">EMBL in the USA: Future facing </a><span class="cp-meta">Jul 7</span></li>
+          <li><a href="#">EMBL in France: Where science meets the sea </a><span class="cp-meta">Jul 3</span</li>
+          <li><a href="#">World Alumni Day 2019 </a><span class="cp-meta">Jun 11</span</li>
+          <li><a href="#">EMBL in Australia </a><span class="cp-meta">May 21</span</li>
+          <li><a href="#">4th EMBL retirees afternoon </a><span class="cp-meta">April 14</span</li>
+        </ul>
+            <hr />
+            <p class="cp-meta"><a href="#">Alumni awards</a></p>
+            <h3><a href="#">EMBL alumnus wins top biology prize</a></h3>
+            <p>A team led by EMBL alumnus Joe Bloggs has received the prestigiuos Charles Darwin prize for innovation</p>
+
+  </div>
+</div>
+<p>&nbsp;</p>
+ <h2><a href="research/index.html">Directory</a></h2>
+ <p>Search the Alumni Directory for colleagues from your time at EMBL.</p>
+<div class="cp-box">
+  <form>
+    <input type="text" placeholder="Search the EMBL Alumni Directory" class="cp-input">
+    <button class="vf-button">Search</button>
+  </form>
+  <p>Browse <a href="#">By Department</a>, <a href="#">By years at EMBL</a>, <a href="#">By Surname</a>, <a href="#">A - Z</a></p>
+  </div>
 </section>
+
 
 <section class="cp-container vf-grid vf-grid__col-1">
   <h2>Support EMBL</h2>
+
+  <p>Innovation in the life sciences is rooted in fundamental research. Today’s technology and improved living conditions are the fruits of our past investments in science. By supporting our research with your philanthropic contribution, you are enabling progress in its purest form.
+</p>
+<p>&nbsp;</p>
+
   <ul>
-    <Li>How to support</li>
-    <Li>Donate</li>
-    <Li>ORD</li>
+    <Li><a href="#">How to support</a></li>
+    <Li><a href="#">Donate</a></li>
+    <Li><a href="#">Office of Resource Development</a></li>
   </ul>
 </section>
 
+
 <section class="cp-container vf-grid vf-grid__col-1">
-  <h2>More about EMBL</h2>
-  <ul>
-    <Li>Council</li>
-    <li>Director General</li>
-    <li>Directorate</li>
-    <li>Member States</li>
-    <li>Faculty</li>
-  </ul>
+<div>
+<h2>More about EMBL</h2>
+<div class="vf-grid vf-grid__col-2">
+  <div>
+    <h4>Council</h4>
+    <p>The EMBL Council is composed of all member states of the Laboratory. Each member state is represented by not more than two delegates, who may be accompanied by advisers.</p>
+    <ul>
+      <li><a href="#">Read more</a></li>
+    </ul>
+    <hr />
+    <h4>Director General</h4>
+    <p>EMBL's DG is geneticist Professor Edith Heard. Previous to her role at EMBL she was Director of the Genetics and Developmental Biology Unit at Institut Curie and holds the chair of Epigenetics and Cellular Memory at the Collège de France.</p>
+    <ul>
+          <li><a href="#">Read more</a></li>
+    </ul>
+    <hr />
+    <h4>Directorate</h4>
+    <p>The EMBL Council, which appoints the Director General, is composed of all member states of the Laboratory. Each member state is represented by up to two delegates, who may be accompanied by advisers. Council ensures that the financial requirements of the agreement establishing EMBL and of the agreements with host member states are complied with.
+
+</p>
+    <ul>
+        <li><a href="#">Read more</a></li>
+    </ul>
+
+  </div>
+  <div>
+    <h4>Member states</h4>
+    <p>MBL is an inter-governmental organisation with more than 20 member states, two associate members and one prospect member.</p>
+    <ul>
+            <li><a href="#">Read more</a></li>
+    </ul>
+    <hr />
+    <h4>Faculty</h4>
+    <p>The EMBL Faculty is organised in departments by research topic. These departments are listed below.</p>
+    <ul>
+          <li><a href="#">Cell Biology and Biophysics</a></li>
+          <li><a href="#">Core Facilities and Scientific Services</a></li>
+          <li><a href="#">Developmental Biology</a></li>
+          <li><a href="#">Genome Biology</a></li>
+          <li><a href="#">Structural and Computational Biology</a></li>
+          <li><a href="#">Director's research</a></li>
+    </ul>
+
+  </div>
+</div>
+</div>
 </section>
+
 
 
 <section class="cp-container vf-grid vf-grid__col-1">
