--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -35,10 +35,10 @@ templateEngineOverride: njk,md
 
 <section class="cp-container vf-grid vf-grid__col-2">
   <div>
-  <p class="cp-lede">EMBL: A centre of excellence in the life sciences </p>
+  <p class="cp-lede">EMBL: Diverse, multicultural, interdiscipinary.</p>
 
-<p>Embl is an international, multicultural research insitute with laboratories at six locations across Europe. Find out more about our vibrant research community.</p>
-  <p><a href="#">Learn more about EMBL's mission</a></p>
+<p>Embl is an international research institute with laboratories at six locations across Europe. Find out more about our vibrant research community.</p>
+  <p><a href="#">Learn more about EMBL's culture</a></p>
   </div>
   <div>
     <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
