--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -32,7 +32,7 @@ embl_content_meta_properties:
 </section>
 
 <section class="cp-container vf-grid vf-grid__col-1">
-  <h1>Services &amp; Facilities at EMBL</h1>
+  <h1>Providing world-class research infrastructure and services </h1>
   <p>EMBL provides the world’s most comprehensive range of freely available and up-to-date molecular data resources and tools, core molecular biology services.</p>
 </section>
 
