--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -44,7 +44,7 @@ embl_content_meta_properties:
 
 <div class="vf-grid vf-grid__col-2">
 <div>
-  <h4><a href="#">EMBL Hamburg</a></h4>
+  <h4><a href="#">Data growth and integration</a></h4>
   <p>EMBL Hamburg operates an <a href="#">integrated infrastructure for life science applications</a> using synchrotron radiation situated at the PETRA storage ring, operated by <a href="#">Helmholtz Research Centre DESY</a> in Hamburg-Bahrenfeld.</p>
 </div>
 <div>
