--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -39,8 +39,12 @@ embl_content_meta_properties:
 <section class="cp-container vf-grid vf-grid__col-1">
 <div>
 <h2><a href="#">Bioinformatics services and IT infrastructure</a></h2>
-<p>25 million web requests received every day by EMBL-EBI’s data resources</p>
-
+<p><em>25 million web requests received every day by EMBL-EBI’s data resources</em></p>
+<p>Through EMBL’s European Bioinformatics Institute
+(EMBL-EBI), the world’s most comprehensive source
+of biomolecular data, we provide a broad community
+of commercial and academic researchers around the
+world with access to crucial data.</p>
 
 <div class="vf-grid vf-grid__col-2">
 <div>
