--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -40,24 +40,7 @@ embl_content_meta_properties:
 <div>
 <h2><a href="#">Bioinformatics services and IT infrastructure</a></h2>
 <p><em>25 million web requests received every day by EMBL-EBI’s data resources</em></p>
-<p>Through EMBL’s European Bioinformatics Institute
-(EMBL-EBI), the world’s most comprehensive source
-of biomolecular data, we provide a broad community
-of commercial and academic researchers around the
-world with access to crucial data.</p>
-
-<div class="vf-grid vf-grid__col-2">
-<div>
-  <h4><a href="#">Data growth and integration</a></h4>
-  <p>EMBL Hamburg operates an <a href="#">integrated infrastructure for life science applications</a> using synchrotron radiation situated at the PETRA storage ring, operated by <a href="#">Helmholtz Research Centre DESY</a> in Hamburg-Bahrenfeld.</p>
-</div>
-<div>
-<h4><a href="#">EMBL Grenoble</a></h4>
-  <p>EMBL Grenoble provides research services such as <a href="#">access to third generation synchrotron beamlines for macromolecular crystallography</a> and <a href="#">instruments for neutron crystallography on the high flux neutron source of the ILL</a></p>
-</div>
-</div>
-</div>
-</section>
+<p>Through EMBL’s European Bioinformatics Institute (EMBL-EBI), the world’s most comprehensive source of biomolecular data, we provide a broad community of commercial and academic researchers around the world with access to crucial data.</p>
 
 <section class="cp-container vf-grid vf-grid__col-1">
 <div>
