--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -44,6 +44,18 @@ embl_content_meta_properties:
 of commercial and academic researchers around the
 world with access to crucial data.</p>
 
+<h2><a href="#">Bioinformatics services and IT infrastructure</a></h2>
+<p><em>25 million web requests received every day by EMBL-EBI’s data resources</em></p>
+<p>Through EMBL’s European Bioinformatics Institute (EMBL-EBI), the world’s most comprehensive source of biomolecular data, we provide a broad community
+of commercial and academic researchers around the
+world with access to crucial data.</p>
+
+<h2><a href="#">Bioinformatics services and IT infrastructure</a></h2>
+<p><em>25 million web requests received every day by EMBL-EBI’s data resources</em></p>
+<p>Through EMBL’s European Bioinformatics Institute (EMBL-EBI), the world’s most comprehensive source of biomolecular data, we provide a broad community
+of commercial and academic researchers around the
+world with access to crucial data.</p>
+
 <section class="cp-container vf-grid vf-grid__col-1">
 <div>
 <h2><a href="#">Tools &amp; Data Resources &rarr;</a></h2>
