--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -44,6 +44,17 @@ embl_content_meta_properties:
 of commercial and academic researchers around the
 world with access to crucial data.</p>
 
+<div>
+<h2><a href="#">Tools &amp; Data Resources &rarr;</a></h2>
+<p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date molecular data resources.</p>
+<div class="cp-box">
+  <form>
+    <input type="text" placeholder="What are you looking for?" class="cp-input">
+    <button class="vf-button">Search</button>
+  </form>
+  <p>Browse <a href="#">Tools</a>, <a href="#">Data Resources</a>, <a href="#">Type</a>, <a href="#">A - Z</a></p>
+  </div>
+
 <h2><a href="#">Bioinformatics services and IT infrastructure</a></h2>
 <p><em>25 million web requests received every day by EMBL-EBI’s data resources</em></p>
 <p>Through EMBL’s European Bioinformatics Institute (EMBL-EBI), the world’s most comprehensive source of biomolecular data, we provide a broad community
