--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -43,6 +43,7 @@ embl_content_meta_properties:
 <p>Through EMBL’s European Bioinformatics Institute (EMBL-EBI), the world’s most comprehensive source of biomolecular data, we provide a broad community
 of commercial and academic researchers around the
 world with access to crucial data.</p>
+<p><em><a href="#"">Browse bioinformatics services</a></em></p>
 
 <div>
 
