--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -55,7 +55,7 @@ world with access to crucial data.</p>
     <input type="text" placeholder="What are you looking for?" class="cp-input">
     <button class="vf-button">Search</button>
   </form>
-  <p>Browse <a href="#">Tools</a>, <a href="#">Data Resources</a>, <a href="#">Type</a>, <a href="#">A - Z</a></p>
+  <p>Browse <a href="#">DESY</a>, <a href="#">ERSF</a>, <a href="#">European X-ray Free Electron Laser</a>, <a href="#">A - Z</a></p>
   </div>
 
 </section>
